--- a/ExemploHibernate_maven/src/main/java/hibernate.properties
+++ b/ExemploHibernate_maven/src/main/java/hibernate.properties
@@ -1,6 +1,6 @@
 hibernate.dialect=org.hibernate.dialect.PostgreSQL82Dialect
 hibernate.connection.driver_class=org.postgresql.Driver
-hibernate.connection.url=jdbc:postgresql://localhost:5432/aula_3
+hibernate.connection.url=jdbc:postgresql://localhost:5432/BD_APS
 hibernate.connection.username=postgres
 hibernate.connection.password=postgres
 hibernate.show_sql=false
